--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
             France
         </h1>
     
-       <img src="Images/River.jfif" alt="Loire River">
+        <img src="Images/River.jfif" alt="Loire River">
 
-       <img src="Images/Pyrenees Mountains.jfif" alt="Pyrenees Mountains in france">
+        <img src="Images/Pyrenees Mountains.jfif" alt="Pyrenees Mountains in france">
 
-        <img src="" alt="">
+        <img src="Images/Alps.jfif" alt="French Alps">
+
+        p
+
     </body>
 
 </html>
