--- a/fact1.html
+++ b/fact1.html
@@ -34,10 +34,15 @@
             </li>
         </ul>
         <h1>
-            Eifful Tower
+            Eiffel Tower
         </h1>
-    
+        
+        <img class="Tower" src="Images/eiffel Tower 2.jpg" alt="Eiffel Tower">
 
+        <p>
+            The eiffel tower was built in 1889 to be used for the Paris world fair that year. Now it is used for a torist attraction and almost 7 million people visit it every year.
+
+        </p>
 
     </body>
 
