--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
     
         <img src="Images/River.jfif" alt="Loire River">
 
-        <img src="Images/Pyrenees Mountains.jfif" alt="Pyrenees Mountains in france">
+        <img src="Images/Alps.jfif" alt="Pyrenees Mountains in france">
 
-        <img src="Images/Alps.jfif" alt="French Alps">
+        <img src="Images/Pyrenees Mountains.jfif" alt="French Alps">
 
-        p
+        <p>
+            France was founded in 987 but it was originally called Gaul. It's name was changed to france in 1792.
+            France has many attractions like the Eiffel tower, French Alps, Pyrenees Mountains and many other things.
+            It is also known for it's great food.
+        </p>
 
     </body>
 
